smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-empty-namespace.smithy
// Parse error at line 4, column 11 near `#`: Unexpected syntax
$version: "0.2.0"

use shape #
